--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "build": "vite build --mode production",
+    "serve": "vite preview",
+    "check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "echarts": "^5.2.2",
+    "lodash": "^4.17.21",
     "naive-ui": "^2.20.2",
     "vfonts": "^0.1.0",
     "vue": "3.2.16",
